Added new BURGER

--- a/index.html
+++ b/index.html
@@ -1,104 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="res/images/favicon.ico">
-        <title>My Dashboard</title>
-    </head>
-    <body>
-        <header>
-            <strong>Welcome to your dashboard!</strong>
-        </header>
-        <section>
-            <div>
-            <img src="res/images/me.png" width="128" height="128" alt="My picture">
-            </div>
-            <div>
-            <ul>
-            <li>Your name</li>
-            <li> A date following this format dd/mm/yyyy</li>
-            <li> Software Engineering </li>
-            </ul>
-            </div>
-            <div>
-            <strong>2.65</strong>
-            </div>
-        </section>
-        <section>
-            <h1>Courses</h1>
-            <table>
-            <thead>
-            <tr>
-            <th>#</th>
-            <th>Course Title</th>
-            <th>Semester</th>
-            <th>Grade</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-            <td>1</td>
-            <td><a href="https://www.google.com" target="_blank">software development</a></td>
-            <td>fall</td>
-            <td>82</td>
-            </tr>
-            <tr>
-            <td>2</td>
-            <td> Systems modelling </td>
-            <td>fall</td>
-            <td>85</td>
-            </tr>
-            <tr>
-            <td>3</td>
-            <td> Requirements Engineering </td>
-            <td>fall</td>
-            <td>99</td>
-            </tr>
-            <tr>
-            <td>4</td>
-            <td> Human Computer Interaction </td>
-            <td>fall</td>
-            <td>65</td>
-            </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td></td>
-                    <td>VALIDÉ?</td>
-                    <td></td>
-                    <td>NON</td>
-                </tr>
-            </tfoot>
-            </table>
-        </section> 
-        
-        <section style="padding: 1cm;">
-            <form action="">
-                <div><label for="">Course Title:</label>
-                </div>
-                <div><input type="text"></div>
-                <div><label for="">Semester:</label></div>
-                <div><select name="" id="">
-                    <option value="">Fall</option>
-                    <option value="">Spring</option>
-                </select></div>
-               <div> <b>Attendance:</b></div>
-                <div><input type="radio" name="" id="">Virtual Attendance</div>
-                <div><input type="radio" name="" id="">Physical Attendance</div>
-                <div><input type="button" value="Submit"></div>
-            
-            </form>
-        </section>   
-        <footer>
-            <ul>
-            <li>
-            <a href="https://www.inpt.ac.ma/" title="bruh" target="_blank">moodle</a>
-            </li>
-            <li>
-            <a href="https://m.inpt.ac.ma/" target="_blank">Courses</a>
-            </li>
-            </ul>
-        </footer>
-    </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Burger Maker</title>
+</head>
+
+<body>
+  <div id="menu">
+    <div class="menu-item">
+      <input type="checkbox" id="tbreadcheck" class="menu-item-input">
+      <label for="tbreadcheck" class="menu-item-label">Top Bread</label>
+    </div>
+    <div class="menu-item">
+      <input type="checkbox" id="meatcheck" class="menu-item-input">
+      <label for="meatcheck" class="menu-item-label">Meat</label>
+    </div>
+    <div class="menu-item">
+      <input type="checkbox" id="cheesecheck" class="menu-item-input">
+      <label for="cheesecheck" class="menu-item-label">Cheese</label>
+    </div>
+    <div class="menu-item">
+      <input type="checkbox" id="lettcheck" class="menu-item-input">
+      <label for="lettcheck" class="menu-item-label">Lettuce</label>
+    </div>
+    <div class="menu-item">
+      <input type="checkbox" id="lbreadcheck" class="menu-item-input">
+      <label for="lbreadcheck" class="menu-item-label">Bottom Bread</label>
+    </div>
+
+  </div>
+  <div id="burger">
+    <div id="tbread" class="bread"></div>
+    <div id="cheese" class="filling"></div>
+    <div id="meat" class="filling"></div>
+    <div id="lett" class="filling"></div>
+    <div id="lbread" class="bread"></div>
+  </div>
+  <script src="script.js"></script>
+
+</body>
+
 </html>
